# 18WEB_HW13-mail_confirm

./: .gitignore  main.py  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16387  16390  16392  16409  16414  16415  16423  16428  16430  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  (+5 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
src/conf/: config.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: user.py
src/services/: auth.py  email.py  roles.py
